--- a/src/app/talent-list/talent/talent.component.scss
+++ b/src/app/talent-list/talent/talent.component.scss
@@ -90,7 +90,7 @@
 
     ::ng-deep .ngxp__container {
         @include talent-description-width();
-        z-index: 2;
+        z-index: 3;
         background: rgba(255, 255, 255, 0.8);
         text-align: center;
     }
